moving views directory to src

--- a/src/views/product/new.ejs
+++ b/src/views/product/new.ejs
@@ -2,7 +2,7 @@
 <div class="container">
     <h1 class="mb-4">New Product</h1>
 
-    <form action="./" method="POST">
+    <form action="" method="POST">
         <%- include('_formProduct') %>
     </form>
 </div>
