--- a/public/views/admin/admin.ejs
+++ b/public/views/admin/admin.ejs
@@ -1,3 +1,4 @@
+<div class="overlay"></div>
 <div class="container">
     <h1 class="mb-4">Admin page</h1>
     <a href="./product/" class="btn btn-success">View products list</a>
