--- a/public/views/admin/category/edit.ejs
+++ b/public/views/admin/category/edit.ejs
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-xl-10 ftco-animate">
-                <form action="./<%= product.id %>?_method=PUT" method="POST">
-                    <%- include('_drinkForm') %>
+                <form action="./<%= category.id %>?_method=PUT" method="POST">
+                    <%- include('_categoryForm') %>
                 </form>
             </div> <!-- .col-md-8 -->
         </div>
