--- a/public/views/admin/product/new.ejs
+++ b/public/views/admin/product/new.ejs
@@ -1,7 +1,11 @@
-<div class="container">
-    <h1 class="mb-4">New Product</h1>
-
-    <form action="" method="POST">
-        <%- include('_formProduct') %>
-    </form>
-</div>
+<section class="ftco-section">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-xl-10 ftco-animate">
+                <form action="" method="POST">
+                    <%- include('_drinkForm') %>
+                </form>
+            </div> <!-- .col-md-8 -->
+        </div>
+    </div>
+</section>
