--- a/public/views/admin/product/product.ejs
+++ b/public/views/admin/product/product.ejs
@@ -1,30 +1,64 @@
-<div class="container">
-    <h1 class="mb-4">Menu Drinks</h1>
-    <a href="./" class="btn btn-secondary">Go back</a>
-    <a href="./new/" class="btn btn-success">New Drink</a>
-
-    <%products.forEach(product => { %>
-        <div class="card mt-4">
-            <div class="card-body">
-                <h4 class="card-title"><%= product.name %></h4>
-                <div class="card-subtitle text-muted mb-2">
-                    <p>category: <%= product.category %></p>
-                </div>
-                <div class="card-subtitle text-muted mb-2">
-                    <p>price: <%= product.price %></p>
-                </div>
-                <div class="card-subtitle text-muted mb-2">
-                    <p>degree: <%= product.degree %></p>
-                </div>
-                <div class="card-text mb-2">
-                    <p>description: <%= product.description %></p>
-                </div>
-                <a href="./<%= product.id %>" class="btn btn-primary">Read More</a>
-                <a href="./edit/<%= product.id %>" class="btn btn-info">Edit</a>
-                <form action="./<%= product.id %>?_method=DELETE" method="POST" class="d-inline">
-                    <button type="submit" class="btn btn-danger">Delete</button>
-                </form>
+<section class="ftco-section">
+    <div class="container">
+        <div class="row justify-content-left">
+            <div class="col col-lg-5 col-md-6 mt-5 cart-wrap ftco-animate">
+                <p class="text-center"><a href="./new/" class="btn btn-primary py-3 px-4">Add new drink</a></p>
             </div>
         </div>
-    <% }) %>
-</div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="table-wrap">
+                <table class="table">
+                    <thead class="thead-primary">
+                    <tr>
+                        <th>&nbsp;</th>
+                        <th>&nbsp;</th>
+                        <th>Product</th>
+                        <th>Price</th>
+                        <th>Size</th>
+                        <th>&nbsp;</th>
+                        <th>&nbsp;</th>
+                        <th>&nbsp;</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <%products.forEach(product => { %>
+                        <tr class="alert" role="alert">
+                            <td>
+
+                            </td>
+                            <td>
+                                <div class="img" style="background-image: url(/images/prod-1.jpg);"></div>
+                            </td>
+                            <td>
+                                <div class="email">
+                                    <span><%= product.name %></span>
+                                    <span> </span>
+                                </div>
+                            </td>
+                            <td>
+                                <span class="price"><%= product.price %></span>
+                            </td>
+                            <td class="quantity">
+                                <p>1 l</p>
+                            </td>
+                            <td>
+                                <a href="/admin/product/<%= product.id %>" class="btn btn-primary">View item</a>
+                            </td>
+                            <td>
+                                <a href="/admin/product/edit/<%= product.id %>" class="btn btn-info">Edit</a>
+                            </td>
+                            <td>
+                                <form action="./<%= product.id %>?_method=DELETE" method="POST" class="d-flex align-items-center justify-content-center">
+                                    <button type="submit" class="btn btn-danger">Delete</button>
+                                </form>
+                            </td>
+                        </tr>
+                    <% }) %>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</section>
