--- a/public/views/admin/product/show.ejs
+++ b/public/views/admin/product/show.ejs
@@ -1,3 +1,27 @@
+<section class="ftco-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 mb-5 ftco-animate">
+                <a href="/images/prod-1.jpg" class="image-popup prod-img-bg"><img src="/images/prod-1.jpg" class="img-fluid" alt="Colorlib Template"></a>
+            </div>
+            <div class="col-lg-6 product-details pl-md-5 ftco-animate">
+                <h3><%= product.name %></h3>
+                <p class="price"><span><%= product.price %> €</span></p>
+                <p>Category: <%= category.name %></p>
+                <p>degree: <%= product.degree %></p>
+
+                <p><%= product.description %></p>
+
+                <p>
+                    <a href="./" class="btn btn-primary py-3 px-5 mr-2">Go back</a>
+                    <a href="/admin/product/edit/<%= product.id %>" class="btn btn-primary py-3 px-5">Edit</a>
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
 
 <div class="container">
     <h1 class="mb-1"><%= product.name %></h1>
