--- a/public/views/layout.ejs
+++ b/public/views/layout.ejs
@@ -8,6 +8,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,700;0,800;1,200;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+      <!--from products table-->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.min.css">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!--      -->
 
     <link rel="stylesheet" href="/css/animate.css">
     <link rel="stylesheet" href="/css/owl.carousel.min.css">
@@ -16,12 +20,6 @@
     
     <link rel="stylesheet" href="/css/flaticon.css">
     <link rel="stylesheet" href="/css/style.css">
-
-      <!--is adeles-->
-     <!-- <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">-->
 
   </head>
   <body>
@@ -37,7 +35,11 @@
 					</div>
 					<div class="col-md-6 d-flex justify-content-md-end">
 		        <div class="reg">
-		        	<p class="mb-0"><a href="#" class="mr-2">Sign Up</a> <a href="#">Log In</a></p>
+		        	<p class="mb-0">
+                        <a href="./admin/" class="mr-2">Admin Page</a>
+                        <a href="#" class="mr-2">Sign Up</a>
+                        <a href="#">Log In</a>
+                    </p>
 		        </div>
 					</div>
 				</div>
@@ -52,6 +54,7 @@
           	<span class="flaticon-shopping-bag"></span>
           	<div class="d-flex justify-content-center align-items-center"><small>3</small></div>
           </a>
+              <!--cart info-->
           <div class="dropdown-menu dropdown-menu-right">
 				    <div class="dropdown-item d-flex align-items-start" href="#">
 				    	<div class="img" style="background-image: url(/images/prod-1.jpg);"></div>
@@ -61,14 +64,14 @@
 				    	</div>
 				    </div>
 				    <div class="dropdown-item d-flex align-items-start" href="#">
-				    	<div class="img" style="background-image: url(/images/prod-2.jpg);"></div>
+				    	<div class="img" style="background-image: url(/images/prod-1.jpg);"></div>
 				    	<div class="text pl-3">
 				    		<h4>Jim Beam Kentucky Straight</h4>
 				    		<p class="mb-0"><a href="#" class="price">$30.89</a><span class="quantity ml-3">Quantity: 02</span></p>
 				    	</div>
 				    </div>
 				    <div class="dropdown-item d-flex align-items-start" href="#">
-				    	<div class="img" style="background-image: url(/images/prod-3.jpg);"></div>
+				    	<div class="img" style="background-image: url(/images/prod-1.jpg);"></div>
 				    	<div class="text pl-3">
 				    		<h4>Citadelle</h4>
 				    		<p class="mb-0"><a href="#" class="price">$22.50</a><span class="quantity ml-3">Quantity: 01</span></p>
@@ -80,6 +83,7 @@
 				    </a>
 				  </div>
         </div>
+            <!--end of cart info-->
 
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
@@ -87,30 +91,49 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+	          <li class="nav-item active"><a href="/" class="nav-link">Home</a></li>
+	          <li class="nav-item"><a href="#" class="nav-link">About</a></li>
 	          <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
               <div class="dropdown-menu" aria-labelledby="dropdown04">
-              	<a class="dropdown-item" href="product.html">Products</a>
-                <a class="dropdown-item" href="product-single.html">Single Product</a>
-                <a class="dropdown-item" href="cart.html">Cart</a>
-                <a class="dropdown-item" href="checkout.html">Checkout</a>
+              	<a class="dropdown-item" href="#">Products</a>
+                <a class="dropdown-item" href="#">Single Product</a>
+                <a class="dropdown-item" href="#">Cart</a>
+                <a class="dropdown-item" href="#">Checkout</a>
               </div>
             </li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+	          <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
+	          <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
 	        </ul>
 	      </div>
 	    </div>
 	  </nav>
     <!-- END nav -->
+    <section class="hero-wrap hero-wrap-2" style="background-image: url('/images/bg_2.jpg');" data-stellar-background-ratio="0.5">
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="row no-gutters slider-text align-items-end justify-content-center">
+                <div class="col-md-9 ftco-animate mb-5 text-center">
+                    <!--<p class="breadcrumbs mb-0">
+                        <span class="mr-2"><a href="/">Home <i class="fa fa-chevron-right"></i></a></span>
+                        <span class="mr-2"><a href="/admin/product/">Product <i class="fa fa-chevron-right"></i></a></span>
+                        <span>Edit <i class="fa fa-chevron-right"></i></span>
+                    </p>-->
+                    <h2 class="mb-0 bread"><%= title %></h2>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <%- body%>
 
 
-		<%- body%>
-
-
-
+    <!--Empty space before footer-->
+    <div class="row mt-5 pt-3 d-flex">
+        <div class="col-md-6">
+            <div class="w-100"></div>
+        </div>
+    </div>
 		<!--FOOTER-->
 
     <footer class="ftco-footer">
@@ -191,8 +214,7 @@
   
 
   <!-- loader -->
-  <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
-
+    <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
   <script src="/js/jquery.min.js"></script>
   <script src="/js/jquery-migrate-3.0.1.min.js"></script>
@@ -208,6 +230,10 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
   <script src="/js/google-map.js"></script>
   <script src="/js/main.js"></script>
+
+<!--from products table-->
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>-->
+
 
   </body>
 </html>
