--- a/public/views/layout.ejs
+++ b/public/views/layout.ejs
@@ -36,7 +36,7 @@
 					<div class="col-md-6 d-flex justify-content-md-end">
 		        <div class="reg">
 		        	<p class="mb-0">
-                        <a href="./admin/" class="mr-2">Admin Page</a>
+                        <a href="/admin/" class="mr-2">Admin Page</a>
                         <a href="#" class="mr-2">Sign Up</a>
                         <a href="#">Log In</a>
                     </p>
