--- a/public/views/_layouts/admin_layout.ejs
+++ b/public/views/_layouts/admin_layout.ejs
@@ -21,7 +21,7 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="/admin/" class="nav-link">Admin page</a></li>
+	          <li class="nav-item"><a href="/admin/" class="nav-link">Admin page</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Orders</a></li>
                 <li class="nav-item"><a href="/admin/category" class="nav-link">Drinks Categories</a></li>
 	          <li class="nav-item"><a href="/admin/product/" class="nav-link">All drinks</a></li>
