--- a/public/views/product.ejs
+++ b/public/views/product.ejs
@@ -6,20 +6,22 @@
                     <%products.forEach(product => { %>
                         <div class="col-md-4 d-flex">
                             <div class="product ftco-animate">
-                                <% if(product.image === null){%>
+                                <% if(product.image === null || product.image === undefined){%>
                                     <div class="img d-flex align-items-center justify-content-center" style="background-image: url(/images/no-image.png);">
                                 <%} else{ %>
-                                    <div class="img d-flex align-items-center justify-content-center" style="background-image: url(/images/products/<%= product.id %>_<%= product.image%>);">
+                                    <div class="img d-flex align-items-center justify-content-center" style="background-image: url(/images/products/<%= product._id %>_<%= product.image%>);">
                                 <%}%>
                                     <div class="desc">
                                         <p class="meta-prod d-flex">
                                             <a href="#" class="d-flex align-items-center justify-content-center"><span class="flaticon-shopping-bag"></span></a>
-                                            <a href="product/<%= product.id %>" class="d-flex align-items-center justify-content-center"><span class="flaticon-visibility"></span></a>
+                                            <a href="/product/<%= product._id %>" class="d-flex align-items-center justify-content-center"><span class="flaticon-visibility"></span></a>
                                         </p>
                                     </div>
                                 </div>
                                 <div class="text text-center">
-                                    <span class="category"><%= product.category %></span>
+                                    <% if(product.categories.length > 0){ %>
+                                        <span class="category"><%= product.categories[0].name %> </span>
+                                    <%}%>
                                     <h2><%= product.name %></h2>
                                     <p class="mb-0"><span class="price"><%= product.price %> €</span></p>
                                 </div>
