--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,6 +59,15 @@ body {
   text-align: left;
   background-color: #fff; }
 
+form .error {
+  color: #ff0000;
+}
+
+input.error {
+  border: 1px solid red;
+  color: red;
+}
+
 [tabindex="-1"]:focus {
   outline: 0 !important; }
 
@@ -9176,7 +9185,7 @@ textarea.form-control {
   font-size: 24px; }
 
 .ftco-section {
-  padding: 6em 0;
+  padding: 3em 0;
   position: relative; }
   @media (max-width: 767.98px) {
     .ftco-section {
